Update Debug Audit Service configuration to use npm for runtime execution

--- a/launch.json
+++ b/launch.json
@@ -58,12 +58,11 @@
       "type": "node",
       "request": "launch",
       "name": "Debug Audit Service",
-      "runtimeExecutable": "nodemon",
-      "program": "${workspaceFolder}/audit-service/src/consumer/server.ts",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run", "dev"],
       "cwd": "${workspaceFolder}/audit-service",
       "envFile": "${workspaceFolder}/audit-service/.env",
       "env": { "NODE_ENV": "development" },
-      "runtimeArgs": ["--exec", "tsx"],
       "restart": true,
       "console": "integratedTerminal",
       "skipFiles": ["<node_internals>/**"]
