--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
   "postman.settings.dotenv-detection-notification-visibility": false,
   "cSpell.words": [
-    "xshop.ai",
+    "xshopai",
     "amqp",
     "appender",
     "bukhtoyarov",
